--- a/package.json
+++ b/package.json
@@ -27,5 +27,17 @@
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.24.1",
     "vite": "^6.2.0"
-  }
+  },
+  "description": "This template provides a minimal setup to get React working in Vite with HMR and some ESLint rules.",
+  "main": "eslint.config.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/git-felipeUrtubia/Piedra-Papel-tijera.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/git-felipeUrtubia/Piedra-Papel-tijera/issues"
+  },
+  "homepage": "https://github.com/git-felipeUrtubia/Piedra-Papel-tijera#readme"
 }
